Optimize multiple output scanning

--- a/.azure-pipelines/.vsts.release.yml
+++ b/.azure-pipelines/.vsts.release.yml
@@ -94,6 +94,7 @@ extends:
     sdl:
       binskim:
         preReleaseVersion: '4.3.1'
+        scanOutputDirectoryOnly: true
       sbom:
         enabled: true
       baseline:
@@ -163,10 +164,11 @@ extends:
             )
           )
         templateContext:
+          outputParentDirectory: $(Build.SourcesDirectory)/_package
           outputs:
           - output: buildArtifacts
             displayName: 'Publish per task NuGet package artifact'
-            PathtoPublish: _package/nuget-packages
+            PathtoPublish: $(Build.SourcesDirectory)/_package/nuget-packages
             ArtifactName: IndividualNuGetPackages
             condition: succeeded()
           - output: nuget
