Updating BinSKim version update in sdl task in pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,8 @@ extends:
     sdl:
       sbom:
         enabled: true
+      binskim:
+        preReleaseVersion: '4.3.1'
       baseline:
         baselineSet: default
         baselineFile: $(Build.SourcesDirectory)/.gdn/.gdnbaselines
