--- a/Tasks/GitHubReleaseV1/package.json
+++ b/Tasks/GitHubReleaseV1/package.json
@@ -12,8 +12,8 @@
     "@types/q": "1.5.0",
     "@types/uuid": "^8.3.0",
     "azure-pipelines-task-lib": "^4.3.1",
-    "azure-pipelines-tasks-utility-common": "3.258.0",
-    "brace-expansion": "1.1.8",
+    "azure-pipelines-tasks-utility-common": "^3.266.0",
+    "brace-expansion": "^1.1.12",
     "browserify-mime": "1.2.9",
     "glob": "7.1.2",
     "q": "1.4.1",
