Courtesy Push Pipeline Improvement - Part#2 | Merge Publish and Courtesy Push Jobs (#21467)
* Merge Publish Steps

* Update Conditions

* Remove Copy pkg

* Update#1 Review comments

* Optimize multiple output scanning

* Baseline pnpm fastlist executables for Guardian BinSkim BA2008

* Add fastlist file hash to the baseline

* AB#2329703 Added Work-Item

* Udpate#1 Review Comments

--- a/ci/courtesy-push-steps.yml
+++ b/ci/courtesy-push-steps.yml
@@ -52,3 +52,29 @@ steps:
 - powershell: |
     Write-Host "##vso[build.updatebuildnumber]$(aggregate_version)"
   displayName: Update build number
+
+- powershell: |
+    cd $(Build.SourcesDirectory)/ci/courtesy-push
+    npm ci
+  displayName: npm ci (courtesy-push)
+
+- powershell: $(Build.SourcesDirectory)/ci/set-sprint-variables.ps1
+  displayName: Set currentSprint variables
+
+- powershell: |
+    $currentDate = Get-Date -Format "yyyyMMdd-HHmm"
+    Write-Host "##vso[task.setVariable variable=currentDate]$currentDate"
+  displayName: Set currentDate variable
+
+- template: /ci/generate-branch-name.yml@self
+- template: /ci/get-AzDo-pat.yml@self
+
+- script: node $(Build.SourcesDirectory)/ci/courtesy-push/courtesy-push.js $(Build.SourcesDirectory)/_package/nuget-packages/unified_deps.xml
+  name: createCourtesyPushPR
+  displayName: Update unified deps and create branch
+  env:
+    TOKEN: $(AzDo_PAT)
+    BRANCH_NAME: $(branchName)
+    DRYRUN: $(isDryRun)
+    USERNAME: $(username)
+
