--- a/Tasks/MSBuildV1/package.json
+++ b/Tasks/MSBuildV1/package.json
@@ -19,7 +19,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^20.3.1",
     "azure-pipelines-task-lib": "^4.16.0",
-    "azure-pipelines-tasks-msbuildhelpers": "file:azure-pipelines-tasks-msbuildhelpers-3.266.0.tgz"
+    "azure-pipelines-tasks-msbuildhelpers": "3.266.0"
   },
   "devDependencies": {
     "typescript": "5.1.6"
