AB#2338159 Fix GitHub Release step

--- a/ci/github-release.yml
+++ b/ci/github-release.yml
@@ -48,6 +48,7 @@ steps:
     $releaseBranch = "$(branchName)"
     $isDryRun = "$(isDryRun)"
     if (($(currentSprintWeek) -eq 3) -or ($isDryRun -eq 'true')) {
+      npm ci
       cd $(System.DefaultWorkingDirectory)/ci/ci-release-notes
       npm ci
       node release-notes.js --token $(GitHubPAT) --version $(currentSprint) --releaseBranch $releaseBranch --isDryRun $isDryRun
