--- a/Tasks/PowerShellV2/package.json
+++ b/Tasks/PowerShellV2/package.json
@@ -16,12 +16,12 @@
   "license": "MIT",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
-    "azure-pipelines-task-lib": "^4.16.0",
+    "@types/node": "^24.10.0",
+    "azure-pipelines-task-lib": "^5.2.2",
     "azure-pipelines-tasks-utility-common": "3.265.1",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
