--- a/Tasks/DotNetCoreCLIV2/Tests/NuGet.config
+++ b/Tasks/DotNetCoreCLIV2/Tests/NuGet.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <clear />
-    <add key="PipelineTools_PublicNugetFeed" value="https://pkgs.dev.azure.com/mseng/PipelineTools/_packaging/PipelineTools_PublicNugetFeed/nuget/v3/index.json" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
 </configuration>
