--- a/Tasks/PublishBuildArtifactsV1/package.json
+++ b/Tasks/PublishBuildArtifactsV1/package.json
@@ -20,10 +20,10 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
-    "azure-pipelines-task-lib": "^4.16.0"
+    "@types/node": "^24.10.0",
+    "azure-pipelines-task-lib": "^5.2.2"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
