--- a/Tasks/CopyFilesV2/package.json
+++ b/Tasks/CopyFilesV2/package.json
@@ -17,7 +17,7 @@
     "@types/node": "^20.11.0",
     "@types/mocha": "^5.2.7",
     "@types/uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "^5.2.0"
+    "azure-pipelines-task-lib-nr-test": "https://registry.npmjs.org/azure-pipelines-task-lib-nr-test/-/azure-pipelines-task-lib-nr-test-5.2.3.tgz"
   },
   "devDependencies": {
     "typescript": "5.1.6"
