--- a/Tasks/NotationV0/package.json
+++ b/Tasks/NotationV0/package.json
@@ -14,7 +14,7 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^16.11.39",
     "azure-devops-node-api": "^13.0.0",
-    "azure-pipelines-task-lib-nr-test": "https://registry.npmjs.org/azure-pipelines-task-lib-nr-test/-/azure-pipelines-task-lib-nr-test-5.2.3.tgz",
+    "azure-pipelines-task-lib-nr-test": "npm:azure-pipelines-task-lib-nr-test@5.2.3",
     "azure-pipelines-tasks-artifacts-common": "^2.262.0",
     "azure-pipelines-tool-lib": "^2.0.10"
   },
