--- a/Tasks/NotationV0/package.json
+++ b/Tasks/NotationV0/package.json
@@ -20,5 +20,8 @@
   },
   "devDependencies": {
     "typescript": "5.1.6"
+  },
+  "overrides": {
+    "azure-pipelines-task-lib": "npm:azure-pipelines-task-lib-nr-test@5.2.3"
   }
 }
