Add codeowners for GradleAuthenticate

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -474,3 +474,5 @@ Tasks/XamariniOSV2/     @microsoft/azure-pipelines-tasks-and-agent @tarunramsing
 Tasks/XamarinTestCloudV1/      @microsoft/azure-pipelines-tasks-and-agent @tarunramsinghani
 
 Tasks/XcodeV5/ @microsoft/azure-pipelines-tasks-and-agent @tarunramsinghani
+
+Tasks/MavenAuthenticateV0/     @microsoft/azure-artifacts-packages
