--- a/Tasks/AzureFunctionAppV1/package.json
+++ b/Tasks/AzureFunctionAppV1/package.json
@@ -37,7 +37,6 @@
     "typescript": "5.1.6"
   },
   "overrides": {
-    "form-data": "^4.0.4",
-    "validator": "13.15.23"
-  }
+    "form-data": "^4.0.4"
+    }
 }
