--- a/Tasks/PublishSymbolsV2/package.json
+++ b/Tasks/PublishSymbolsV2/package.json
@@ -26,7 +26,7 @@
     "azure-pipelines-tasks-artifacts-common": "^2.262.0",
     "azure-pipelines-tasks-packaging-common": "^3.236.0",
     "azure-pipelines-tasks-utility-common": "3.258.0",
-    "azure-pipelines-tasks-azure-arm-rest": "^3.263.1",
+    "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
     "agent-base": "^6.0.2",
     "msal-node2": "npm:@azure/msal-node@^2.9.2",
     "uuid": "^10.0.0",
