--- a/Tasks/DotNetCoreCLIV2/package.json
+++ b/Tasks/DotNetCoreCLIV2/package.json
@@ -27,7 +27,8 @@
     "azure-pipelines-tasks-packaging-common": "3.246.2",
     "azure-pipelines-tasks-utility-common": "3.265.1",
     "json5": "^2.2.3",
-    "uuid": "3.2.1"
+    "uuid": "3.2.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "typescript": "5.1.6"
