Updated Build pipeline to use Node24

--- a/ci/ci-test-tasks/canary-tests-v2.yml
+++ b/ci/ci-test-tasks/canary-tests-v2.yml
@@ -3,6 +3,14 @@ parameters:
   displayName: Flag to update LocalPackages buildconfig (for testing, this will be made  default later)
   type: boolean
   default: false # Note: keep in sync with /azure-pipelines.yml
+- name: USE_node20
+  displayName: 'Feature Flag: USE_node20'
+  type: string
+  default: ''
+- name: usenode24withtaskhandler
+  displayName: 'Feature Flag: usenode24withtaskhandler'
+  type: string
+  default: ''
 
 variables:
 - name: includeLocalPackagesBuildConfigParameter
@@ -49,9 +57,9 @@ jobs:
     vmImage: ubuntu-latest
   steps:
   - task: NodeTool@0
-    displayName: Use Node 20.x
+    displayName: Use Node 24.x
     inputs:
-      versionSpec: 20.x
+      versionSpec: 24.x
 
   - script: |
       cd ./ci/ci-test-tasks/test-and-verify-v2
@@ -64,3 +72,6 @@ jobs:
       node ./ci/ci-test-tasks/test-and-verify-v2 $(System.AccessToken) $(ADOUrl) $(System.TeamProject) $(tasks)
     displayName: 'Run test pipelines and verify results'
     failOnStderr: true
+    env:
+      USE_node20: ${{ parameters.USE_node20 }}
+      usenode24withtaskhandler: ${{ parameters.usenode24withtaskhandler }}
