--- a/Tasks/SshV0/package.json
+++ b/Tasks/SshV0/package.json
@@ -6,17 +6,17 @@
   },
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/q": "^1.0.7",
     "@types/ssh2": "^1.11.19",
     "@types/ssh2-sftp-client": "^9.0.3",
-    "azure-pipelines-task-lib": "^4.16.0",
+    "azure-pipelines-task-lib": "^5.2.2",
     "azure-pipelines-tasks-utility-common": "3.258.0",
     "ssh2": "^1.15.0",
-    "ssh2-sftp-client": "^9.1.0",
+    "ssh2-sftp-client": "^12.0.1",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
