--- a/Tasks/DotNetCoreCLIV2/package.json
+++ b/Tasks/DotNetCoreCLIV2/package.json
@@ -22,8 +22,8 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^24.10.0",
     "archiver": "1.2.0",
-    "azure-devops-node-api": "11.2.0",
-    "azure-pipelines-task-lib": "^5.2.2",
+    "azure-devops-node-api": "^15.1.3",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-packaging-common": "3.246.2",
     "azure-pipelines-tasks-utility-common": "3.265.1",
     "json5": "^2.2.3",
