--- a/Tasks/CopyFilesV2/package.json
+++ b/Tasks/CopyFilesV2/package.json
@@ -14,12 +14,12 @@
   "author": "Microsoft Corporation",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^20.11.0",
+    "@types/node": "^24.10.0",
     "@types/mocha": "^5.2.7",
     "@types/uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "^5.2.0"
+    "azure-pipelines-task-lib": "^5.2.2"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
