--- a/Tasks/GruntV0/package.json
+++ b/Tasks/GruntV0/package.json
@@ -20,11 +20,11 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
-    "azure-pipelines-task-lib": "^4.16.0",
+    "@types/node": "^24.10.0",
+    "azure-pipelines-task-lib": "^5.2.2",
     "minimatch": "^3.0.4"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
