--- a/Tasks/GulpV1/package.json
+++ b/Tasks/GulpV1/package.json
@@ -17,12 +17,12 @@
   "homepage": "https://github.com/microsoft/vsts-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/q": "^1.0.7",
-    "azure-pipelines-task-lib": "^4.16.0",
+    "azure-pipelines-task-lib": "^5.2.2",
     "minimatch": "^4.0.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
