--- a/Tasks/NodeTaskRunnerInstallerV0/package.json
+++ b/Tasks/NodeTaskRunnerInstallerV0/package.json
@@ -9,11 +9,12 @@
   "author": "Microsoft Corporation",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^20.3.1",
-    "azure-pipelines-task-lib": "^4.16.0",
+    "@types/node": "^24.10.0",
+    "@types/mocha": "^10.0.10",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tool-lib": "^2.0.10"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
