--- a/Tasks/PyPIPublisherV0/package.json
+++ b/Tasks/PyPIPublisherV0/package.json
@@ -12,10 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.11.0",
-    "azure-pipelines-task-lib": "^4.16.0"
+    "@types/node": "^24.10.0",
+    "azure-pipelines-task-lib": "^5.2.4"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
