--- a/Tasks/DownloadPackageV1/package.json
+++ b/Tasks/DownloadPackageV1/package.json
@@ -20,9 +20,9 @@
   "homepage": "https://github.com/Microsoft/vsts-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
-    "azure-devops-node-api": "11.2.0",
-    "azure-pipelines-task-lib": "3.3.1",
+    "@types/node": "^24.10.0",
+    "azure-devops-node-api": "^15.1.3",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-packaging-common": "^3.246.1",
     "azure-pipelines-tasks-utility-common": "3.265.1",
     "decompress-zip": "0.3.3",
@@ -30,7 +30,7 @@
     "extract-zip": "2.0.1"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "form-data": "^4.0.4"
