--- a/Tasks/NpmV1/package.json
+++ b/Tasks/NpmV1/package.json
@@ -19,15 +19,15 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "@types/node": "^20.3.1",
-    "azure-pipelines-task-lib": "4.3.1",
+    "@types/node": "^24.10.0",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-packaging-common": "^3.244.0",
     "azure-pipelines-tasks-utility-common": "3.265.1",
     "ini": "^1.3.4",
     "mockery": "^1.7.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "form-data": "^4.0.4"
