--- a/Tasks/CopyFilesOverSSHV0/package.json
+++ b/Tasks/CopyFilesOverSSHV0/package.json
@@ -20,13 +20,13 @@
   "homepage": "https://github.com/Microsoft.com/vsts-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
-    "azure-pipelines-task-lib": "^4.16.0",
+    "@types/node": "^24.10.0",
+    "azure-pipelines-task-lib": "^5.2.4",
     "minimatch": "^3.0.4",
-    "ssh2": "^1.4.0",
-    "ssh2-sftp-client": "^7.0.4"
+    "ssh2": "^1.15.0",
+    "ssh2-sftp-client": "^12.0.1"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
