--- a/Tasks/MavenV4/package.json
+++ b/Tasks/MavenV4/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@types/jsdom": "^16.2.14",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
-    "azure-pipelines-task-lib": "^4.16.0",
+    "@types/node": "^24.10.0",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-codeanalysis-common": "^2.242.0",
     "azure-pipelines-tasks-codecoverage-tools": "^3.245.1",
     "azure-pipelines-tasks-java-common": "2.264.0",
@@ -30,7 +30,7 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "form-data": "^3.0.4"
