--- a/Tasks/NuGetInstallerV0/package.json
+++ b/Tasks/NuGetInstallerV0/package.json
@@ -20,15 +20,15 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/uuid": "^8.3.0",
     "azure-pipelines-tasks-packaging-common": "3.206.0",
     "azure-pipelines-tasks-utility-common": "3.258.0",
-    "azure-pipelines-task-lib": "^4.17.2",
+    "azure-pipelines-task-lib": "^5.2.4",
     "xmlreader": "^0.2.3"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "form-data": "^4.0.4"
