--- a/Tasks/NuGetToolInstallerV0/package.json
+++ b/Tasks/NuGetToolInstallerV0/package.json
@@ -26,12 +26,13 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/uuid": "^8.3.0",
     "azure-pipelines-tasks-packaging-common": "^3.221.0",
-    "azure-pipelines-tasks-utility-common": "3.265.1"
+    "azure-pipelines-tasks-utility-common": "3.265.1",
+    "azure-pipelines-task-lib": "^5.2.4"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
