--- a/Tasks/InstallAppleCertificateV2/package.json
+++ b/Tasks/InstallAppleCertificateV2/package.json
@@ -20,13 +20,13 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
-    "azure-pipelines-task-lib": "^4.16.0",
+    "@types/node": "^24.10.0",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-ios-signing-common": "2.227.0",
     "azure-pipelines-tasks-securefiles-common": "2.263.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "form-data": "^4.0.4"
