--- a/Tasks/FuncToolsInstallerV0/package.json
+++ b/Tasks/FuncToolsInstallerV0/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^20.3.1",
     "@types/mocha": "^5.2.7",
     "@types/uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "4.3.1",
+    "azure-pipelines-task-lib": "^4.17.3",
     "azure-pipelines-tool-lib": "^2.0.10"
   },
   "overrides": {
-    "form-data": "^4.0.4"
+    "form-data": "^4.0.4",
+    "brace-expansion": "^2.0.1",
+    "qs": "^6.14.1"
   }
 }
