--- a/Tasks/DownloadBuildArtifactsV0/package.json
+++ b/Tasks/DownloadBuildArtifactsV0/package.json
@@ -20,14 +20,14 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
-    "artifact-engine": "^1.5.5",
-    "azure-devops-node-api": "^10.2.2",
-    "azure-pipelines-task-lib": "^4.13.0",
+    "@types/node": "^24.10.0",
+    "artifact-engine": "^1.263.0",
+    "azure-devops-node-api": "^15.1.3",
+    "azure-pipelines-task-lib": "^5.2.4",
     "decompress-zip": "0.3.3",
     "extract-zip": "2.0.1"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
