--- a/Tasks/JenkinsDownloadArtifactsV2/package.json
+++ b/Tasks/JenkinsDownloadArtifactsV2/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/mocha": "^5.2.7",
     "@types/node": "^20.3.1",
+    "@types/q": "^1.5.0",
     "@types/uuid": "^8.3.0",
     "agent-base": "^6.0.2",
     "artifact-engine": "^1.5.5",
