--- a/Tasks/AzureAppConfigurationExportV10/package.json
+++ b/Tasks/AzureAppConfigurationExportV10/package.json
@@ -23,7 +23,7 @@
         "@types/mocha": "^5.2.7",
         "agent-base": "^6.0.2",
         "azure-pipelines-task-lib": "^4.13.0",
-        "azure-pipelines-tasks-azure-arm-rest": "3.267.1"
+        "azure-pipelines-tasks-azure-arm-rest": "^3.267.1"
     },
     "devDependencies": {
         "typescript": "5.1.6"
