--- a/Tasks/JavaToolInstallerV1/package.json
+++ b/Tasks/JavaToolInstallerV1/package.json
@@ -31,7 +31,7 @@
     "agent-base": "^6.0.2",
     "azp-tasks-az-blobstorage-provider": "^3.262.0",
     "azure-pipelines-task-lib": "^5.2.4",
-    "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
+    "azure-pipelines-tasks-azure-arm-rest": "^3.263.1",
     "azure-pipelines-tasks-utility-common": "3.265.1",
     "azure-pipelines-tool-lib": "^2.0.10",
     "path-to-regexp": "^1.7.0"
