--- a/Tasks/KubectlInstallerV0/package.json
+++ b/Tasks/KubectlInstallerV0/package.json
@@ -5,13 +5,13 @@
   },
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/uuid": "^8.3.0",
-    "azure-pipelines-task-lib": "^4.17.0",
-    "azure-pipelines-tasks-kubernetes-common": "2.252.0",
+    "azure-pipelines-task-lib": "^5.2.4",
+    "azure-pipelines-tasks-kubernetes-common": "^2.267.0",
     "azure-pipelines-tool-lib": "^2.0.10"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
