--- a/Tasks/AzureAppServiceManageV0/package.json
+++ b/Tasks/AzureAppServiceManageV0/package.json
@@ -20,17 +20,16 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^24.10.0",
+    "@types/node": "^20.3.1",
     "@types/q": "1.0.7",
     "agent-base": "6.0.2",
-    "Agent.Tasks": "file:../..",
-    "azure-pipelines-task-lib": "^5.2.4",
+    "azure-pipelines-task-lib": "^4.11.0",
     "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
     "azure-pipelines-tasks-utility-common": "3.267.0",
     "q": "1.4.1",
     "xml2js": "^0.5.0"
   },
   "devDependencies": {
-    "typescript": "^5.7.2"
+    "typescript": "5.1.6"
   }
 }
