modify changes to support for node compatibility

--- a/ci/ci-test-tasks/nodecompatibility-canary-tests.yml
+++ b/ci/ci-test-tasks/nodecompatibility-canary-tests.yml
@@ -65,17 +65,19 @@ jobs:
     value: $[dependencies.set_tasks.outputs['set.tasks']]
   - name: agent_ubuntu_24_04
     value: ubuntu-24.04
+  - name: isNodeCompatible
+    value: true
   strategy:
     matrix:
-      ubuntu2404_node10:
-        vmImage: ${{variables.agent_ubuntu_24_04}}
-        nodeVersion: '10.x'
+      # ubuntu2404_node10:
+      #   vmImage: ${{variables.agent_ubuntu_24_04}}
+      #   nodeVersion: '10.x'
       ubuntu2404_node16:
         vmImage: ${{variables.agent_ubuntu_24_04}}
         nodeVersion: '16.x'
-      ubuntu2404_node20:
-        vmImage: ${{variables.agent_ubuntu_24_04}}
-        nodeVersion: '20.x'
+      # ubuntu2404_node20:
+      #   vmImage: ${{variables.agent_ubuntu_24_04}}
+      #   nodeVersion: '20.x'
       # ubuntu2204_node10:
       #   vmImage: variables.agent_ubuntu_22_04
       #   nodeVersion: '10.x'
@@ -201,6 +203,6 @@ jobs:
   - bash: |
       echo "Agent: $(vmImage) - Node: $(nodeVersion)"
       echo "Tasks to test: $(tasks)"
-      node ./ci/ci-test-tasks/test-and-verify-v2 $(System.AccessToken) $(ADOUrl) $(System.TeamProject) $(tasks)
+      node ./ci/ci-test-tasks/test-and-verify-v2 $(System.AccessToken) $(ADOUrl) $(System.TeamProject) $(tasks) $(isNodeCompatible)
     displayName: Run test pipelines and verify results
     failOnStderr: true
