--- a/Tasks/PublishPipelineMetadataV0/package.json
+++ b/Tasks/PublishPipelineMetadataV0/package.json
@@ -5,12 +5,12 @@
   "main": "publishmetadata.js",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/uuid": "^8.3.0",
     "azure-pipelines-tasks-utility-common": "3.267.0"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   },
   "scripts": {
     "build": "node ../../make.js build --task PublishPipelineMetadataV0",
