--- a/Tasks/NuGetAuthenticateV0/package.json
+++ b/Tasks/NuGetAuthenticateV0/package.json
@@ -25,11 +25,11 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "@types/node": "^16.11.39",
+    "@types/node": "^20.3.1",
     "azure-pipelines-task-lib": "^4.2.0",
     "azure-pipelines-tasks-artifacts-common": "^2.262.0"
   },
   "devDependencies": {
-    "typescript": "4.0.2"
+    "typescript": "^5.7.2"
   }
 }
