--- a/Tasks/DockerInstallerV0/package.json
+++ b/Tasks/DockerInstallerV0/package.json
@@ -4,14 +4,14 @@
     "serverBuild": "node ../../make.js serverBuild --task DockerInstallerV0"
   },
   "dependencies": {
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/mocha": "^5.2.7",
     "@types/uuid": "^8.3.0",
     "@types/q": "^1.5.0",
-    "azure-pipelines-task-lib": "^4.17.0",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tool-lib": "^2.0.10"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
