--- a/Tasks/AzureResourceManagerTemplateDeploymentV3/package.json
+++ b/Tasks/AzureResourceManagerTemplateDeploymentV3/package.json
@@ -6,15 +6,15 @@
     "serverBuild": "node ../../make.js serverBuild --task AzureResourceManagerTemplateDeploymentV3"
   },
   "dependencies": {
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "agent-base": "^6.0.2",
-    "azure-pipelines-task-lib": "^4.17.2",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-artifacts-common": "^2.262.0",
-    "azure-pipelines-tasks-azure-arm-rest": "3.267.1",
+    "azure-pipelines-tasks-azure-arm-rest": "^3.267.1",
     "moment": "^2.29.4",
     "typed-rest-client": "^1.8.9"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
