--- a/Tasks/GoToolV0/package.json
+++ b/Tasks/GoToolV0/package.json
@@ -25,12 +25,12 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
-    "azure-pipelines-task-lib": "^4.0.0-preview",
+    "@types/node": "^24.10.0",
+    "azure-pipelines-task-lib": "^5.2.4",
     "azure-pipelines-tasks-utility-common": "3.267.0",
     "azure-pipelines-tool-lib": "^2.0.10"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
