--- a/Tasks/JenkinsDownloadArtifactsV1/package.json
+++ b/Tasks/JenkinsDownloadArtifactsV1/package.json
@@ -19,7 +19,7 @@
     "agent-base": "^6.0.2",
     "artifact-engine": "^1.263.0",
     "azure-pipelines-task-lib": "^4.11.0",
-    "azure-pipelines-tasks-azure-arm-rest": "C:\\commonrepo\\azure-pipelines-tasks-common-packages\\common-npm-packages\\azure-arm-rest\\_build\\azure-pipelines-tasks-azure-arm-rest-3.269.0.tgz",
+    "azure-pipelines-tasks-azure-arm-rest": "3.269.0",
     "@azure/storage-blob": "^12.29.1",
     "decompress-zip": "0.3.3",
     "extract-zip": "2.0.1",
