--- a/Tasks/DownloadFileshareArtifactsV1/package.json
+++ b/Tasks/DownloadFileshareArtifactsV1/package.json
@@ -20,12 +20,12 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^20.3.1",
+    "@types/node": "^24.10.0",
     "@types/uuid": "^8.3.0",
-    "artifact-engine": "^1.5.5",
-    "azure-pipelines-task-lib": "^4.13.0"
+    "artifact-engine": "^1.263.0",
+    "azure-pipelines-task-lib": "^5.2.4"
   },
   "devDependencies": {
-    "typescript": "5.1.6"
+    "typescript": "^5.7.2"
   }
 }
