--- a/Tasks/AzureAppConfigurationImportV10/.npmrc
+++ b/Tasks/AzureAppConfigurationImportV10/.npmrc
@@ -1,3 +1,3 @@
-registry=https://pkgs.dev.azure.com/mseng/PipelineTools/_packaging/PipelineTools_PublicPackages/npm/registry/
+registry=https://registry.npmjs.org/
 
 always-auth=true
