update node 24 minor version and change to usenode task in pipeline

--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -24,10 +24,10 @@ steps:
     version: 8.x
 
 # Use node 20, npm 9
-- task: NodeTool@0
+- task: UseNode@1
   displayName: Use node 20
   inputs:
-    versionSpec: 20.x
+    version: 20.20.x
 
 - task: NpmAuthenticate@0
   inputs:
